fixed z-index problem

--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,7 @@ a {
 }
 
 .leftcontainer {
+    z-index: 5;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
